compiler/testData/cli/jvm/diagnosticTests/forbidKotlinPackageK2.out
compiler/testData/cli/jvm/diagnosticTests/forbidKotlinPackage.kt:3:1: error: only the Kotlin standard library is allowed to use the 'kotlin' package.
package kotlin.internal
^^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
